# sandman

./: CMakeLists.txt  INSTALL.md  LICENSE  README.md
include/: sandman.h  sandmanCUDA.h
src/: sandman.cpp  sandmanCUDA.cu  sandmanPlots.py
